@@ -78,6 +78,7 @@ import org.junit.jupiter.api.extension.ParameterContext;
 import org.junit.jupiter.api.extension.ParameterResolutionException;
 import org.junit.jupiter.api.extension.ParameterResolver;
 import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junit.jupiter.api.parallel.ResourceLock;
 import org.junit.jupiter.engine.descriptor.ClassTemplateInvocationTestDescriptor;
 import org.junit.jupiter.engine.descriptor.ClassTemplateTestDescriptor;
 import org.junit.jupiter.engine.descriptor.ClassTestDescriptor;
@@ -94,6 +95,7 @@ import org.junit.platform.engine.TestTag;
 import org.junit.platform.engine.UniqueId;
 import org.junit.platform.engine.discovery.DiscoverySelectors;
 import org.junit.platform.engine.reporting.ReportEntry;
+import org.junit.platform.engine.support.hierarchical.ExclusiveResource;
 import org.junit.platform.testkit.engine.EngineExecutionResults;
 import org.opentest4j.AssertionFailedError;
 import org.opentest4j.TestAbortedException;
@@ -1003,6 +1005,24 @@ public class ClassTemplateInvocationTests extends AbstractJupiterTestEngineTests
 		assertThat(engineDescriptor.getDescendants()).isEmpty();
 	}
 
+	@Test
+	void classTemplateWithResourceLockCollectsExclusiveResources() {
+		var results = discoverTestsForClass(ClassTemplateWithResourceLockTestCase.class);
+		var classTemplateDescriptor = (ClassTemplateTestDescriptor) getOnlyElement(
+			results.getEngineDescriptor().getChildren());
+
+		assertThat(classTemplateDescriptor.getExclusiveResources()).extracting(
+			ExclusiveResource::getKey).containsExactly("test-resource");
+	}
+
+	@Test
+	void classTemplateWithResourceLockExecutesSuccessfully() {
+		var results = executeTestsForClass(ClassTemplateWithResourceLockTestCase.class);
+
+		results.testEvents().assertStatistics(stats -> stats.started(2).succeeded(2));
+		results.containerEvents().assertStatistics(stats -> stats.started(4).succeeded(4));
+	}
+
 	// -------------------------------------------------------------------
 
 	private static Stream<String> allReportEntryValues(EngineExecutionResults results) {
@@ -1563,6 +1583,17 @@ public class ClassTemplateInvocationTests extends AbstractJupiterTestEngineTests
 			@Test
 			void test() {
 			}
+		}
+	}
+
+	@SuppressWarnings("JUnitMalformedDeclaration")
+	@ClassTemplate
+	@ExtendWith(TwoInvocationsClassTemplateInvocationContextProvider.class)
+	@ResourceLock("test-resource")
+	static class ClassTemplateWithResourceLockTestCase {
+		@Test
+		void test() {
+			// This test verifies that @ResourceLock works with @ClassTemplate (issue #5155)
 		}
 	}
 
